Project : Continue project

--- a/HTML/E_commerce.html
+++ b/HTML/E_commerce.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce</title>
+    <title>Ecommerce-Website</title>
     <link rel="stylesheet" href="/CSS/E_commerce.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,41 +19,96 @@
           <nav>
             <a href="#">Home</a>
             <a href="#">Products</a>
+            <a href="#">About</a>
             <a href="#">Contact</a>
-            <a href="$">About</a>
             <a href="#">Account</a>
-            <a href=""><img src="/images/cart.png" alt="Cart" /></a>
+            <a href="#"><img src="/images/cart.png" alt="Cart" /></a>
           </nav>
         </div>
-        <div class="headerContent">
-          <div class="headerContentitem">
+        <div class="row">
+          <div class="col">
             <h1>
               Elite Gear for <br />
               Elite Athletes
             </h1>
             <p>
-              Where performance meets style. Experience sportswear <br />
-              engineered for excellence, designed for champion
+              Where perfomence meets style.Experience sportwear <br />
+              engineered for excillence,designed for champions
             </p>
           </div>
-          <div class="headerContentitem">
-            <img src="/images/image1.png" alt="" />
-          </div>
+          <div class="col"><img src="/images/image1.png" alt="image1" /></div>
         </div>
       </div>
     </div>
+    <!-- categories -->
     <div class="categories">
-      <div class="small-container">
-        <div class="row">
-          <div class="col">
-            <img src="/images/category-1.jpg" alt="" />
+      <div class="container2">
+        <div class="row2">
+          <div class="col2"><img src="/images/category-1.jpg" alt="" /></div>
+          <div class="col2"><img src="/images/category-2.jpg" alt="" /></div>
+          <div class="col2"><img src="/images/category-3.jpg" alt="" /></div>
+        </div>
+      </div>
+    </div>
+    <!-- products -->
+    <div class="container3">
+      <h2>Featured Products</h2>
+      <div class="row3">
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-1.jpg" alt=""
+          /></a>
+          <h4>Red Printed T-Shirt</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
           </div>
-          <div class="col">
-            <img src="/images/category-2.jpg" alt="" />
+          <p>₹50.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-2.jpg" alt=""
+          /></a>
+          <h4>HRX Sports Shoes</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
           </div>
-          <div class="col">
-            <img src="/images/category-3.jpg" alt="" />
+          <p>₹75.00</p>
+        </div>
+         <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-3.jpg" alt=""
+          /></a>
+          <h4>HRX Gray Trackpants</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
           </div>
+          <p>₹45.00</p>
+        </div>
+         <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-4.jpg" alt=""
+          /></a>
+          <h4>Blue Printed T-Shirt</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹55.00</p>
         </div>
       </div>
     </div>
