Project : Made Home Page of E-Commerce web page

--- a/HTML/E_commerce.html
+++ b/HTML/E_commerce.html
@@ -82,7 +82,7 @@
           </div>
           <p>₹75.00</p>
         </div>
-         <div class="col3">
+        <div class="col3">
           <a href="/product-details"
             ><img src="/images/product-3.jpg" alt=""
           /></a>
@@ -96,7 +96,7 @@
           </div>
           <p>₹45.00</p>
         </div>
-         <div class="col3">
+        <div class="col3">
           <a href="/product-details"
             ><img src="/images/product-4.jpg" alt=""
           /></a>
@@ -109,6 +109,204 @@
             <img src="/images/star.png" alt="" />
           </div>
           <p>₹55.00</p>
+        </div>
+      </div>
+      <h2>Latest Products</h2>
+      <div class="row3">
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-5.jpg" alt=""
+          /></a>
+          <h4>Puma Gray Sports Shoes</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹95.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-6.jpg" alt=""
+          /></a>
+          <h4>Black Printed T-Shirt</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹55.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-7.jpg" alt=""
+          /></a>
+          <h4>HRX Set of 3 Socks</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹30.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-8.jpg" alt=""
+          /></a>
+          <h4>Black Fossil Watch</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹120.00</p>
+        </div>
+      </div>
+      <div class="row3">
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-9.jpg" alt=""
+          /></a>
+          <h4>Black SportX Watch</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹135.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-10.jpg" alt=""
+          /></a>
+          <h4>Black HRX Shoes</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹50.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-11.jpg" alt=""
+          /></a>
+          <h4>Grey Nike Shoes</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹55.00</p>
+        </div>
+        <div class="col3">
+          <a href="/product-details"
+            ><img src="/images/product-12.jpg" alt=""
+          /></a>
+          <h4>HRX Black Trackpants</h4>
+          <div class="rating">
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+            <img src="/images/star.png" alt="" />
+          </div>
+          <p>₹75.00</p>
+        </div>
+      </div>
+    </div>
+    <!-- offer -->
+    <div class="offer">
+      <div class="container4">
+        <div class="row4">
+          <div class="col4">
+            <img src="/images/exclusive.png" alt="" />
+          </div>
+          <div class="col4">
+            <p>Exclusively Available on store</p>
+            <h2>Smart Band 4</h2>
+            <small
+              >The Mi Smart Band 4 features a 39.9% larger (than Mi Band 3)
+              AMOLED color full-touch display with adjustable brightness, so
+              everything is clear as can be.</small
+            >
+            <br />
+            <span class="btn">Buy Now →</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rew">
+      <div class="container5">
+        <div class="row5">
+          <div class="col5">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever.
+            </p>
+            <div class="rating">
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+            </div>
+            <img src="/images/user-1.png" alt="">
+            <h3>Jean Rose</h3>
+          </div>
+          <div class="col5">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+            </p>
+            <div class="rating">
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+            </div>
+            <img src="/images/user-2.png" alt="">
+            <h3>Walter White</h3>
+          </div>
+          <div class="col5">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+            </p>
+            <div class="rating">
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+              <img src="/images/star.png" alt="" />
+            </div>
+            <img src="/images/user-3.png" alt="">
+            <h3>Helen</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="brand">
+      <div class="container6">
+        <div class="row6">
+          <div class="col6"><img src="/images/logo-godrej.png" alt=""></div>
+          <div class="col6"><img src="/images/logo-oppo.png" alt=""></div>
+          <div class="col6"><img src="/images/logo-coca-cola.png" alt=""></div>
+          <div class="col6"><img src="/images/logo-paypal.png" alt=""></div>
+          <div class="col6"><img src="/images/logo-philips.png" alt=""></div>
         </div>
       </div>
     </div>
