Project : Add Product page in E-COMMERCE WEB UI

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Products</title>
     <link rel="stylesheet" href="/CSS/E_commerce.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,41 +18,26 @@
         <div class="navbar">
           <nav>
             <a href="#">Home</a>
-            <a href="products.html">Products</a>
+            <a href="#">Products</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
             <a href="#">Account</a>
             <a href="#"><img src="/images/cart.png" alt="Cart" /></a>
           </nav>
         </div>
-        <div class="row">
-          <div class="col">
-            <h1>
-              Elite Gear for <br />
-              Elite Athletes
-            </h1>
-            <p>
-              Where perfomence meets style.Experience sportwear <br />
-              engineered for excillence,designed for champions
-            </p>
-          </div>
-          <div class="col"><img src="/images/image1.png" alt="image1" /></div>
-        </div>
       </div>
     </div>
-    <!-- categories -->
-    <div class="categories">
-      <div class="container2">
-        <div class="row2">
-          <div class="col2"><img src="/images/category-1.jpg" alt="" /></div>
-          <div class="col2"><img src="/images/category-2.jpg" alt="" /></div>
-          <div class="col2"><img src="/images/category-3.jpg" alt="" /></div>
-        </div>
-      </div>
-    </div>
-    <!-- products -->
     <div class="container3">
-      <h2>Featured Products</h2>
+      <div class="row-h2">
+        <h2>All Products</h2>
+        <select name="" id="">
+          <option value="">Default Sorting</option>
+          <option value="">Sort by Price</option>
+          <option value="">Sort by Popularity</option>
+          <option value="">Sort by rating</option>
+          <option value="">Sort by Sale</option>
+        </select>
+      </div>
       <div class="row3">
         <div class="col3">
           <a href="/product-details"
@@ -111,7 +96,6 @@
           <p>₹55.00</p>
         </div>
       </div>
-      <h2>Latest Products</h2>
       <div class="row3">
         <div class="col3">
           <a href="/product-details"
@@ -228,86 +212,12 @@
           <p>₹75.00</p>
         </div>
       </div>
-    </div>
-    <!-- offer -->
-    <div class="offer">
-      <div class="container4">
-        <div class="row4">
-          <div class="col4">
-            <img src="/images/exclusive.png" alt="" />
-          </div>
-          <div class="col4">
-            <p>Exclusively Available on store</p>
-            <h2>Smart Band 4</h2>
-            <small
-              >The Mi Smart Band 4 features a 39.9% larger (than Mi Band 3)
-              AMOLED color full-touch display with adjustable brightness, so
-              everything is clear as can be.</small
-            >
-            <br />
-            <span class="btn">Buy Now →</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="rew">
-      <div class="container5">
-        <div class="row5">
-          <div class="col5">
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever.
-            </p>
-            <div class="rating">
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-            </div>
-            <img src="/images/user-1.png" alt="">
-            <h3>Jean Rose</h3>
-          </div>
-          <div class="col5">
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-            </p>
-            <div class="rating">
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-            </div>
-            <img src="/images/user-2.png" alt="">
-            <h3>Walter White</h3>
-          </div>
-          <div class="col5">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-            </p>
-            <div class="rating">
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-              <img src="/images/star.png" alt="" />
-            </div>
-            <img src="/images/user-3.png" alt="">
-            <h3>Helen</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="brand">
-      <div class="container6">
-        <div class="row6">
-          <div class="col6"><img src="/images/logo-godrej.png" alt=""></div>
-          <div class="col6"><img src="/images/logo-oppo.png" alt=""></div>
-          <div class="col6"><img src="/images/logo-coca-cola.png" alt=""></div>
-          <div class="col6"><img src="/images/logo-paypal.png" alt=""></div>
-          <div class="col6"><img src="/images/logo-philips.png" alt=""></div>
-        </div>
+      <div class="next-page">
+        <button type="button">1</button>
+        <button type="button">2</button>
+        <button type="button">3</button>
+        <button type="button">4</button>
+        <button type="button">→</button>
       </div>
     </div>
     <div class="footer">
