--- a/Projects/E_commerce/Product_details.html
+++ b/Projects/E_commerce/Product_details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Details</title>
-    <link rel="stylesheet" href="/CSS/E_commerce.css" />
+    <link rel="stylesheet" href="E_commerce.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
             <a href="#">About</a>
             <a href="#">Contact</a>
             <a href="#">Account</a>
-            <a href="#"><img src="/images/cart.png" alt="Cart" /></a>
+            <a href="cart.html"><img src="/images/cart.png" alt="Cart" /></a>
           </nav>
         </div>
       </div>
@@ -60,7 +60,7 @@
           </select>
           <br />
           <input type="number" value="1" id="675" />
-          <a href="" class="btn">Add to Cart</a>
+          <a href="cart.html" class="btn">Add to Cart</a>
           <h3>PRODUCT DETAILS</h3>
           <p>
             Give your summer wardrobe a style upgrade with the HRX Men's Active
