--- a/Projects/E_commerce/products.html
+++ b/Projects/E_commerce/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
-    <link rel="stylesheet" href="/CSS/E_commerce.css" />
+    <link rel="stylesheet" href="E_commerce.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
             <a href="#">About</a>
             <a href="#">Contact</a>
             <a href="#">Account</a>
-            <a href="#"><img src="/images/cart.png" alt="Cart" /></a>
+            <a href="cart.html"><img src="/images/cart.png" alt="Cart" /></a>
           </nav>
         </div>
       </div>
