ADD : add logic to calculator

--- a/Projects/Calculator/calculator.html
+++ b/Projects/Calculator/calculator.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="calculator">
-      <input type="text" placeholder="0" id="inputbox"/>
+      <input type="text" placeholder="0" id="inputbox" readonly/>
       <div class="calculator-btn-container">
         <div class="calculator-btn-row">
           <button class="operator">AC</button>
@@ -48,6 +48,6 @@
         </div>
       </div>
     </div>
-    <script src="/JS/calculator.js"></script>
+    <script src="calculator.js"></script>
   </body>
 </html>
