--- a/Projects/TicTacToe/index.html
+++ b/Projects/TicTacToe/index.html
@@ -42,6 +42,12 @@
             <div class="grid-Box bottom right"></div>
         </div>
     </div>
+    <div class="modal">
+      <div class="modal-content">
+        <h2 class="Win-Msg">Player X wins!🎉</h2>
+        <button class="Play-again">Play Again</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
